fixed contrast bug on follow button

--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -378,10 +378,12 @@ form#chatter-post-form {
 	background-color: #ffffff !important;
 	width: 100%;
 }
-
 .recent-topics, .followed-topics {
 	margin-top: 0.75em;
 	h3 {
 		margin-bottom: 0;
 	}
+}
+.userRelated {
+    .css3_border_radius(.5em);
 }
